feat: add Products crud
